--- a/style.css
+++ b/style.css
@@ -3,11 +3,12 @@
   padding: 0;
   font-family: "Poppins", sans-serif;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
   min-height: 100vh;
-  background: radial-gradient(#0288d1, #01579b);
+  background: lightgoldenrodyellow;
 }
 
 .header {
@@ -21,7 +22,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* z-index: 100; */
+  z-index: 100;
 }
 
 .logo {
@@ -54,14 +55,14 @@ body {
 }
 
 .indexSection1 {
-  position: absolute;
+  background-color: lightblue;
+  position: relative;
   top: 80px;
+  bottom: 80px;
   left: 50%;
   transform: translate(-50%, 0);
   width: 960px;
   height: 795px;
-  border-style: solid;
-  border-color: black;
 }
 
 .indexHeader {
@@ -88,4 +89,28 @@ body {
   font-family: Brush Script MT, cursive;
   margin-top: 200px;
   text-align: center;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  background: grey;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.facebook {
+  margin: 20px;
+}
+
+.linkedin {
+  margin: 20px;
+}
+
+.twitter {
+  margin: 20px;
 }
