--- a/style.css
+++ b/style.css
@@ -54,15 +54,14 @@ body {
   width: 100%;
 }
 
-.indexSection1 {
+.indexSection {
   background-color: lightblue;
   position: relative;
   top: 80px;
-  bottom: 80px;
   left: 50%;
   transform: translate(-50%, 0);
   width: 960px;
-  height: 795px;
+  height: 758px;
 }
 
 .indexHeader {
@@ -113,4 +112,97 @@ footer {
 
 .twitter {
   margin: 20px;
+}
+
+.aboutSection {
+  background-color: lightblue;
+  position: relative;
+  top: 80px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 960px;
+  height: 1150px;
+}
+
+.aboutHeader {
+  font-size: 32px;
+  padding: 20px;
+}
+
+.aboutHeader:after {
+  content: "";
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  padding-top: 20px;
+  border-bottom: 2px solid black;
+}
+
+.gymHeader {
+  margin-left: 20px;
+}
+
+.gymImg {
+  float: right;
+  margin: 0px 24px 24px 24px;
+}
+
+.gymText {
+  margin: 16px 0px 16px 20px;
+}
+
+.gymText2 {
+  margin: 16px 20px 16px 20px;
+}
+
+.gymText2:after {
+  content: "";
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  padding-top: 20px;
+  border-bottom: 2px solid black;
+}
+
+.judoHeader {
+  margin-left: 20px;
+}
+
+.judoImg {
+  float: left;
+  margin: 16px 24px 24px 20px;
+}
+
+.judoText {
+  margin: 16px 20px 16px 20px;
+}
+
+.judoText2 {
+  margin: 16px 20px 16px 20px;
+}
+
+.judoText2:after {
+  content: "";
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  padding-top: 20px;
+  border-bottom: 2px solid black;
+}
+
+.gameHeader {
+  margin-left: 20px;
+}
+
+.gameImg {
+  float: right;
+  margin: 0px 24px 24px 24px;
+}
+
+.gameText {
+  margin: 16px 0px 16px 20px;
+}
+
+.gameText2 {
+  margin: 16px 20px 16px 20px;
 }
